--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>SpringMVCloginExample</display-name>
+	<display-name>SpringMVCloginExample</display-name>
+
+	<welcome-file-list>
+	    <welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
   
-  
-  <servlet>
+	 <servlet>
 		<servlet-name>springLoginApplication</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
@@ -14,8 +17,8 @@
 	</servlet>
 	
 	 <servlet-mapping>
-      <servlet-name>springLoginApplication</servlet-name>
-      <url-pattern>/</url-pattern>
-   </servlet-mapping>
+	     <servlet-name>springLoginApplication</servlet-name>
+	     <url-pattern>/</url-pattern>
+	  </servlet-mapping>
   
 </web-app>
