--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,19 @@
 			<version>2.4</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+		   <groupId>javax</groupId>
+		   <artifactId>javaee-api</artifactId>
+		   <version>6.0</version>
+		   <scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<version>4.7</version>
+			<!-->scope>test</scope-->
 		</dependency>
 
 		<!-- spring-context which provides core functionality -->
@@ -34,6 +42,20 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>4.1.6.RELEASE</version>
+		</dependency>
+		
+		<!-- http://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
+		    <version>1.0.0.RELEASE</version>
+		</dependency>
+		
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>2.5</version>
 		</dependency>
 
 		<!-- The spring-aop module provides an AOP Alliance-compliant aspect-oriented 
@@ -61,6 +83,13 @@
 			<artifactId>spring-web</artifactId>
 			<version>4.1.6.RELEASE</version>
 		</dependency>
+		
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-orm -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-orm</artifactId>
+		    <version>4.1.6.RELEASE</version>
+		</dependency>
 
 		<!-- http://mvnrepository.com/artifact/mysql/mysql-connector-java -->		
 		<dependency>
@@ -69,6 +98,24 @@
 		    <version>5.1.30</version>
 		</dependency>
 
+		<!-- http://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20090211</version>
+		</dependency>
+		
+		<dependency>
+	        <groupId>org.hibernate.javax.persistence</groupId>
+	        <artifactId>hibernate-jpa-2.1-api</artifactId>
+	        <version>1.0.0.Final</version>
+	    </dependency>
+	    
+		<dependency>
+		   <groupId>org.hibernate</groupId>
+		   <artifactId>hibernate-entitymanager</artifactId>
+		   <version>3.6.7.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
