--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
 		   <artifactId>hibernate-entitymanager</artifactId>
 		   <version>3.6.7.Final</version>
 		</dependency>
+		
+		<!-- http://mvnrepository.com/artifact/org.webjars.bower/jquery-file-download -->
+		<dependency>
+		    <groupId>org.webjars.bower</groupId>
+		    <artifactId>jquery-file-download</artifactId>
+		    <version>1.4.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
