--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,31 @@
 .settings/org.eclipse.wst.common.component
 .settings/org.eclipse.wst.common.project.facet.core.xml
 .settings/org.eclipse.wst.jsdt.ui.superType.container
+.settings/org.eclipse.wst.jsdt.ui.superType.name
+*.class
+target/classes/resource/springBeanConfiguration.xml
+target/classes/resource/springWeb.xml
+target/DMS1-0.0.1-SNAPSHOT.war
+target/DMS1-0.0.1-SNAPSHOT/index.jsp
+target/DMS1-0.0.1-SNAPSHOT/jsp/include.jsp
+target/DMS1-0.0.1-SNAPSHOT/jsp/login.jsp
+target/DMS1-0.0.1-SNAPSHOT/jsp/welcome.jsp
+target/DMS1-0.0.1-SNAPSHOT/META-INF/MANIFEST.MF
+target/DMS1-0.0.1-SNAPSHOT/WEB-INF/classes/resource/springBeanConfiguration.xml
+target/DMS1-0.0.1-SNAPSHOT/WEB-INF/classes/resource/springWeb.xml
+target/DMS1-0.0.1-SNAPSHOT/WEB-INF/lib/aopalliance-1.0.jar
+target/DMS1-0.0.1-SNAPSHOT/WEB-INF/lib/commons-logging-1.2.jar
+target/DMS1-0.0.1-SNAPSHOT/WEB-INF/lib/mysql-connector-java-5.1.30.jar
+target/DMS1-0.0.1-SNAPSHOT/WEB-INF/lib/spring-aop-4.1.6.RELEASE.jar
+*.jar
+target/DMS1-0.0.1-SNAPSHOT/WEB-INF/web.xml
+*.properties
+target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+*.lst
+.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
+target/classes/META-INF/persistence.xml
+.classpath
+.classpath
+target/DMS1-0.0.1-SNAPSHOT/jsp/dashboard.jsp
+target/DMS1-0.0.1-SNAPSHOT/WEB-INF/classes/META-INF/persistence.xml
+target/DMS1-0.0.1-SNAPSHOT/jsp/dashboard.jsp
