--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
 		    <version>20090211</version>
 		</dependency>
 		
+		<!-- http://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		
 		<dependency>
 	        <groupId>org.hibernate.javax.persistence</groupId>
 	        <artifactId>hibernate-jpa-2.1-api</artifactId>
